# cell_generator

./: .gitignore  .gitignore copy  Cell_Cycle copy.ipynb  Cell_Cycle.ipynb  README.md  agg_correlations_results.py  analyzer.sh  callbacks.py  check_distribution.py  checkpoint  compare.py  compare.sh  correlations_to_graph.py  dataset.py  deploy.bat  example.ipynb  global_vars.py  gui.py  gui_logic.py  init_env_vars.py  ittest.sbatch  linear_regression_mask_efficacy.py  metrics.py  mg_analyzer.py  pyproject.toml  replace_dir.sh  requirements.txt  setup.py  test.py  test.sh  train.py  train.sh  utils.py  visulaize_data.py  x.py
create_data/: create_dataset.sh  create_metadata.py  create_metadata_pertrub.py  download_and_create_dataset_full.py  download_and_create_dataset_singlecell.py  seg_proto.py  segment_and_create_pertrub_dataset.py
figures/: 0_reproduce_unet_scores.py  0_reproduce_unet_scores.sh  10_validation_figure.py  11_calculate_spatial_pcc.py  12_calculate_explanation_mask_efficacy_perturbation.py  12_calculate_explanation_mask_efficacy_perturbation.sh  13_calculate_unet_scores_perturbations.py  13_calculate_unet_scores_perturbations.sh  14_agg_and_analyze_mask_efficacy_perturbationspy  15_agg_and_analyze_unet_predictions_perturbations.py  16_dremi.py  17_ablation_stydy.py  18b_examples_3d.py  1_choose_noise_scale.py  1_choose_noise_scale.sh  2_choose_th.py  2_choose_th.sh  3_calculate_unet_scores.py  3_calculate_unet_scores.sh  4_calculate_explanation_mask_efficacy.py  5_agg_and_analyze_mask_efficacy.py  5a_agg_and_analyze_mask_efficacy_nested.py  choose_th.py  (+33 more)
(+41 files in other folders)
